# oconfigure

./: .gitignore  LICENSE.md  Makefile  Makefile.regen  README.md  compat-preamble.h  compat_INFTIM.h  compat_PATH_MAX.h  compat_WAIT_ANY.h  compat_arc4random.c  compat_b64_ntop.c  compat_b64_ntop.h  compat_blowfish.c  compat_crypt_newhash.c  compat_endian.h  compat_err.c  compat_err.h  compat_explicit_bzero.c  compat_explicit_bzero.h  compat_fts.c  compat_fts.h  compat_getprogname.c  compat_getprogname.h  compat_major_minor.h  compat_md5.c  compat_md5.h  compat_memmem.c  compat_memmem.h  compat_memrchr.c  compat_memrchr.h  compat_mkfifoat.c  compat_mkfifoat.h  compat_mknodat.c  compat_mknodat.h  compat_osbyteorder.h  compat_readpassphrase.c  compat_readpassphrase.h  compat_reallocarray.c  compat_reallocarray.h  compat_recallocarray.c  (+84 more)
.github/workflows/: makefile.yml
expected/: config-dragonflybsd.h  config-freebsd.h  config-linux.h  config-linux_libbsd.h  config-macos.h  config-netbsd.h  config-omnios.h
regress/: INFTIM.c  PASSWORD_LEN.c  PATH_MAX.c  SOCK_NONBLOCK.c  WAIT_ANY.c  arc4random.c  b64_ntop.c  blowfish.c  capsicum.c  cdefs.c  crypt.c  crypt_newhash.c  endian.c  err.c  expat.c  explicit_bzero.c  fts.c  getprogname.c  md5.c  memmem.c  memrchr.c  minor.c  mkfifoat.c  mknodat.c  pledge.c  reallocarray.c  recallocarray.c  scan_scaled.c  setresgid.c  setresuid.c  sha2.c  strlcat.c  strlcpy.c  strndup.c  strnlen.c  strtonum.c  sys_queue.c  systrace.c  termios.c  timingsafe_bcmp.c  (+2 more)
